service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ingress-server-check
  namespace: default
spec:
  template:
    metadata:
      labels:
        app: ingress-server-check
      annotations:
        autoscaling.knative.dev/maxScale: "20"
        autoscaling.knative.dev/target: "10"
    spec:
      containers:
        - image: registry.cn-hangzhou.aliyuncs.com/knative-sample/ingress-check-server:2019-10-14
          ports:
            - name: http1
              containerPort: 8080
          env:
            - name: TARGET
              value: "https://github.com/knative-sample/helloworld-go"
